# Monthly-Num-Atten

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/aggregate-enrollment/: SKILL.md
app/: main.py
routers/: upload.py
scripts/: aggregate.py
services/: aggregator.py
static/: style.css
templates/: base.html  index.html  result.html
tests/: test_aggregator.py
