[project]
name = "course-stats-analyzer"
version = "0.1.0"
description = "月次受講人数集計CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "yossy-portal-lib",
]

[tool.uv.sources]
yossy-portal-lib = { path = "../yossy-portal/lib", editable = true }
